kubernetes.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logto
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logto-app
  namespace: logto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logto-app
  template:
    metadata:
      labels:
        app: logto-app
    spec:
      hostAliases:
        - ip: 34.54.130.27
          hostnames:
            - apilogto.kfc.com.ec
            - logto.kfc.com.ec
      containers:
        - name: logto-app
          image: us-east1-docker.pkg.dev/grupo-kfc-poc/registrykfc/logtokfc:latest
          imagePullPolicy: Always
          command: ["sh", "-c"]
          args:
            - "npm run cli db seed -- --swe && npm start"
          ports:
            - containerPort: 3001
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: logto-service
  namespace: logto
  annotations:
    cloud.google.com/backend-config: '{"ports": {"3002":"logto-gateway-status", "3001":"logto-gateway-status"}}'
    cloud.google.com/neg: '{"ingress":true}'
spec:
  selector:
    app: logto-app
  ports:
    - protocol: TCP
      name: http-3001
      port: 3001
      targetPort: 3001
    - protocol: TCP
      name: http-3002
      port: 3002
      targetPort: 3002
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logto-service-ingress
  namespace: logto
  annotations:
    kubernetes.io/ingress.class: gce
    ingress.gcp.kubernetes.io/pre-shared-cert: kfc-ecuador-24-25
spec:
  rules:
    - host: logto.kfc.com.ec
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: logto-service
                port:
                  number: 3002
    - host: apilogto.kfc.com.ec
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: logto-service
                port:
                  number: 3001
